Added language setting

--- a/mis-frontend/src/i18n/en.json
+++ b/mis-frontend/src/i18n/en.json
@@ -4,7 +4,8 @@
     "password": "Password"
   },
   "settings": {
-    "title": "Settings"
+    "title": "Settings",
+    "language": "Language"
   },
   "public": {
     "passwordForgottenPrompt": "Forgot your password?",
