Implemented basic menu navigation

--- a/mis-frontend/src/i18n/en.json
+++ b/mis-frontend/src/i18n/en.json
@@ -1,7 +1,11 @@
 {
   "general": {
     "identifier": "Identifier",
-    "password": "Password"
+    "password": "Password",
+    "dashboard": "Dashboard",
+    "identities": "Identities",
+    "domains": "Domains",
+    "roles": "Roles"
   },
   "settings": {
     "title": "Settings",
