Fixed menu & content layout

--- a/mis-frontend/src/i18n/de.json
+++ b/mis-frontend/src/i18n/de.json
@@ -1,2 +1,10 @@
 {
+  "general": {
+    "identifier": "Kennung",
+    "password": "Passwort",
+    "dashboard": "Dashboard",
+    "identities": "Identitäten",
+    "domains": "Domänen",
+    "roles": "Rollen"
+  }
 }
