Made the role table display domain names instead of IDs

--- a/mis-frontend/src/i18n/en.json
+++ b/mis-frontend/src/i18n/en.json
@@ -1,13 +1,19 @@
 {
   "general": {
     "id": "ID",
+    "name": "Name",
     "identifier": "Identifier",
     "password": "Password",
     "dashboard": "Dashboard",
     "identities": "Identities",
+    "identity": "Identity",
     "domains": "Domains",
+    "domain": "Domain",
     "roles": "Roles",
-    "noData": "No Data."
+    "role": "Role",
+    "noData": "No Data.",
+    "save": "Save",
+    "cancel": "Cancel"
   },
   "settings": {
     "title": "Settings",
