Added prompt to identities deletion and implemented role and domain del

--- a/mis-frontend/src/i18n/en.json
+++ b/mis-frontend/src/i18n/en.json
@@ -13,6 +13,7 @@
     "role": "Role",
     "noData": "No Data.",
     "save": "Save",
+    "delete": "Delete",
     "cancel": "Cancel"
   },
   "settings": {
