Implemented UI for identity role editor

--- a/mis-frontend/src/i18n/en.json
+++ b/mis-frontend/src/i18n/en.json
@@ -12,9 +12,10 @@
     "roles": "Roles",
     "role": "Role",
     "noData": "No Data.",
+    "cancel": "Cancel",
+    "reset": "Reset",
     "save": "Save",
-    "delete": "Delete",
-    "cancel": "Cancel"
+    "delete": "Delete"
   },
   "settings": {
     "title": "Settings",
