Implemented API key management in the frontend

--- a/mis-frontend/src/i18n/en.json
+++ b/mis-frontend/src/i18n/en.json
@@ -11,6 +11,9 @@
     "domain": "Domain",
     "roles": "Roles",
     "role": "Role",
+    "api-keys": "API Keys",
+    "apiKeys": "API Keys",
+    "apiKey": "API Key",
     "noData": "No Data.",
     "cancel": "Cancel",
     "reset": "Reset",
